--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
 
     </string-array>
     <string-array name="bluetooth_range">
-        <item>Select Bluetooth Device</item>
+        <item>Select</item>
 
     </string-array>
 </resources>
